fix typo in path

--- a/notebooks/Fine-tuning_a_pre-trained_Language_Model.ipynb
+++ b/notebooks/Fine-tuning_a_pre-trained_Language_Model.ipynb
@@ -47,7 +47,7 @@
     "# Configuration\n",
     "\n",
     "config = {\n",
-    "    \"path_to_data\": \"./labeled_corpus_texts.csv\",\n",
+    "    \"path_to_data\": \"../data/labeled_corpus_texts.csv\",\n",
     "    \n",
     "    # our model on huggingface: https://huggingface.co/sagteam/covid-twitter-xlm-roberta-large/tree/main\n",
     "    \"model\": {\"model_type\": \"xlmroberta\",\n",
